--- a/index.html
+++ b/index.html
@@ -57,51 +57,59 @@
         <section class="restaurant">
             <div>
                 <h2>Restaurants</h2>
-                <div>
+                <div class="restaurant__bloc">
                     <a href="menu1.html">
                         <figure class="restaurant__menu">
                             <img class="restaurant__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                             <span class="restaurant__news">Nouveau</span>
-                            <figcaption>
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
+                            <figcaption class="restaurant__titre">
+                                <h3 class="restaurant__grosTitre">La palette du goût</h3>
+                                <p class="restaurant__localisation">Ménilmontant</p>
                             </figcaption>
-                            <i class="fa-heart far"></i>
-                            <i class="fa-heart fas"></i>
+                            <div class="restaurant__blocHeart">
+                                <i class="fa-heart far restaurant__heartWhite"></i>
+                                <i class="fa-heart fas restaurant__heartRose"></i>
+                            </div>    
                         </figure>
                     </a>
                     <a href="menu2.html">
                         <figure class="restaurant__menu">
                             <img class="restaurant__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                             <span class="restaurant__news">Nouveau</span>
-                            <figcaption>
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>
+                            <figcaption class="restaurant__titre">
+                                <h3 class="restaurant__grosTitre">La note enchantée</h3>
+                                <p class="restaurant__localisation">Charonne</p>
                             </figcaption>
-                            <i class="fa-heart far"></i>
-                            <i class="fa-heart fas"></i>
+                            <div class="restaurant__blocHeart">
+                                <i class="fa-heart far restaurant__heartWhite"></i>
+                                <i class="fa-heart fas restaurant__heartRose"></i>
+                            </div>  
                         </figure>
                     </a>
                     <a href="menu3.html">
                         <figure class="restaurant__menu">
                             <img class="restaurant__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                            <figcaption>
-                                <h3>A la francaise</h3>
-                                <p>Cité rouge</p>
+                            <figcaption class="restaurant__titre">
+                                <h3 class="restaurant__grosTitre">A la francaise</h3>
+                                <p class="restaurant__localisation">Cité rouge</p>
                             </figcaption>
-                            <i class="fa-heart far"></i>
-                            <i class="fa-heart fas"></i>
+                            <div class="restaurant__blocHeart">
+                                <i class="fa-heart far restaurant__heartWhite"></i>
+                                <i class="fa-heart fas restaurant__heartRose"></i>
+                            </div>  
                         </figure>
                     </a>
                     <a href="menu4.html">
                         <figure class="restaurant__menu" >
                             <img class="restaurant__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                            <figcaption>
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
+                            <figcaption class="restaurant__titre">
+                                <h3 class="restaurant__grosTitre">Le délice des sens</h3>
+                                <p class="restaurant__localisation">Folie-Méricourt</p>
                             </figcaption>
-                            <i class="fa-heart far"></i>
-                            <i class="fa-heart fas"></i>
+                            <div class="restaurant__blocHeart">
+                                <i class="fa-heart far restaurant__heartWhite"></i>
+                                <i class="fa-heart fas restaurant__heartRose"></i>
+                            </div>  
                         </figure>
                     </a>
                 </div>
